tests/invalid/While_Invalid_6.whiley
function extract(int[] ls) -> int:
    int i = 0
    int r = [1]
    //
    while i < |ls| where |r| < 2:
        r = [0;0]
    //
    return r
